2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_send_event):
	  Fix build with gcc-4.1 (#327355).

2006-03-09  Christophe Fergeau  <teuf@gnome.org>

	reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	* ext/Makefile.am:
	* ext/taglib/Makefile.am:
	* ext/taglib/gsttaglib.cc:
	* ext/taglib/gsttaglib.h: new id3v2 muxer based on TagLib

2006-03-08  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_parse_udta):
	  Extract disc number and count from files that use
	  'disk' instead of 'disc' as node identifier for that
	  (fixes #332066).

2006-03-06  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/musepack/gstmusepackdec.h:
	* ext/musepack/gstmusepackreader.c: (gst_musepack_reader_peek):
	  Forgot those two.

2006-03-06  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_base_init),
	(gst_musepackdec_init), (gst_musepackdec_send_newsegment),
	(gst_musepackdec_handle_seek_event),
	(gst_musepackdec_get_src_query_types), (gst_musepackdec_src_query),
	(gst_musepack_stream_init), (gst_musepackdec_sink_activate),
	(gst_musepackdec_sink_activate_pull), (gst_musepackdec_loop),
	(gst_musepackdec_change_state):
	  Some cleanups; pause task when push fails.

2006-03-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):
	  Add support for '3IVD' fourcc (#333403).

2006-03-04  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/faad/gstfaad.c: (gst_faad_init), (gst_faad_send_tags),
	(gst_faad_setcaps), (gst_faad_do_raw_seek), (gst_faad_src_event),
	(gst_faad_sink_event), (gst_faad_src_convert),
	(gst_faad_src_query), (gst_faad_chain), (gst_faad_change_state):
	  Add query function for position/duration querying (mostly for
	  raw AAC streams); make seeking in raw AAC streams work; post
	  tags with codec name if this is a raw AAC stream.
