@@ -1,3 +1,15 @@
+2006-03-10  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/libmms/gstmms.c: (gst_mms_urihandler_init),
+	(gst_mms_base_init), (gst_mms_class_init), (gst_mms_init),
+	(gst_mms_finalize), (gst_mms_create), (gst_mms_start),
+	(gst_mms_set_property), (gst_mms_get_property),
+	(gst_mms_uri_get_uri):
+	* ext/libmms/gstmms.h:
+	  Some clean-ups; more debug output; use blocksize property
+	  of GstBaseSrc instead of re-registering our own; make debug
+	  category actually be used.
+
 2006-03-09  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/qtdemux/qtdemux.c: (gst_qtdemux_send_event):
